--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
+    margin: 0px;
     font-family: 'Poppins', sans-serif;
+
 }
 
 h1{
@@ -19,4 +21,25 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+
+}
+
+section{
+    height: 500px;
+}
+
+.link-button{
+
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon,red );
+    background-color: orangered;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: pink;
+    font-weight: 700;
 }
